--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,12 @@
         "psr-4": {
             "LaravelNemo\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "LaravelNemo\\ServiceProvider"
+            ]
+        }
     }
 }
