--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "extra": {
         "laravel": {
             "providers": [
-              "NemoServiceProvider"
+              "LaravelNemo\\NemoServiceProvider"
             ]
         }
     }
