--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "erusev/parsedown": "^1.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "barryvdh/laravel-debugbar": "^3.6"
     },
     "autoload-dev": {
         "psr-4": {
@@ -28,8 +29,11 @@
     "extra": {
         "laravel": {
             "providers": [
-              "LaravelNemo\\NemoServiceProvider"
-            ]
+                "LaravelNemo\\NemoServiceProvider"
+            ],
+            "aliases": {
+                "ApiResponse":"LaravelNemo\\Facades\\ApiResponse"
+            }
         }
     }
 }
