--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
             ],
             "aliases": {
                 "ApiResponse":"LaravelNemo\\Facades\\ApiResponse"
+            },
+            "branch-alias": {
+                "dev-master": "1.0-dev"
             }
         }
     }
